Fixed description alignment for home entry.

--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -27,6 +27,10 @@
   overflow-y: scroll;
 }
 
+.home-content p {
+  text-align: left;
+}
+
 .home-media {
   display: flex;
   width: 300px;
